--- a/src/main/resources/templates/task-ld/task.html
+++ b/src/main/resources/templates/task-ld/task.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{task-ld/layout}">
 <head>
-    <title th:text="#{view.index.title}">Welcome!</title>
+    <title>Task Details</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="../../../resources/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/webjars/bootstrap/3.0.0/css/bootstrap.min.css}"/>
     <link href="../../../resources/static/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
@@ -9,16 +11,13 @@
     <script src="../../../resources/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/3.0.0/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<div th:replace="fragments/header :: header">&nbsp;</div>
-<div class="container">
-    <!-- /* Handle the flash message */-->
-    <th:block th:if="${message != null}">
-        <!-- /* The message code is returned from the @Controller */ -->
-        <div th:replace="fragments/alert :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${#authentication.name})})">&nbsp;</div>
-    </th:block>
-    <p>
-        Welcome to the Spring MVC Quickstart application!
-    </p>
+
+<!--/* Create */-->
+<div layout:fragment="content">
+    <div id="task-details">
+        <h2 th:text="${task.title}">Task Details</h2>
+        <div th:text="${task.text}">Text</div>
+    </div>
 </div>
 </body>
 </html>
